<resources>
    <string name="app_name">Hospital_Tilisarao</string>
    <string name="todo">TODO</string>
    <string name="title_activity_menu_main">Menu_main_Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="anuncios">Anuncios</string>
    <string name="logout">Logout</string>
    <string name="nuevo_turno">Nuevo Turno</string>
    <string name="Perfil">Perfil</string>
</resources>