<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_anuncios">

    <fragment
        android:id="@+id/nav_anuncios"
        android:name="com.example.hospital_tilisarao.ui.anuncios.AnunciosFragment"
        android:label="@string/anuncios"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.example.hospital_tilisarao.ui.perfil.PerfilFragment"
        android:label="@string/Perfil"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.hospital_tilisarao.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.hospital_tilisarao.ui.logout.LogoutFragment"
        android:label="@string/logout"
        tools:layout="@layout/fragment_logout" />
    <fragment
        android:id="@+id/nav_nuevo_turno"
        android:name="com.example.hospital_tilisarao.ui.turnos.NuevoTurnoFragment"
        android:label="@string/nuevo_turno"
        tools:layout="@layout/fragment_nuevo_turno" />
</navigation>